--- a/intel-chatbot-frontend/package.json
+++ b/intel-chatbot-frontend/package.json
@@ -18,6 +18,8 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-grid-heatmap": "^1.3.0",
+    "react-heatmap-grid": "^0.9.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
