--- a/intel-chatbot-frontend/package.json
+++ b/intel-chatbot-frontend/package.json
@@ -22,6 +22,7 @@
     "react-heatmap-grid": "^0.9.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
