--- a/intel-chatbot-frontend/package.json
+++ b/intel-chatbot-frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "dompurify": "^3.1.6",
@@ -21,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-grid-heatmap": "^1.3.0",
     "react-heatmap-grid": "^0.9.0",
+    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "uuid": "^10.0.0",
